--- a/src/contentserver/build.gradle
+++ b/src/contentserver/build.gradle
@@ -61,6 +61,7 @@ dependencies {
 	implementation group: 'javax.activation', name: 'activation', version: '1.1.1'
 	
 	implementation project(":src:common")
+	implementation project(":src:modulemanager")
 }
 
 project.configurations.implementation.canBeResolved = true
@@ -70,6 +71,8 @@ task installation () {
 		copy {
 			from "edge-contentserver"
 			from "edge-contentserver.bat"
+			from "edge-contentserverdumper"
+			from "edge-contentserverdumper.bat"
 			into "../../build/contentserver"
 		}
 		for (ResolvedArtifact arti : project.configurations.implementation.resolvedConfiguration.getResolvedArtifacts()) {
