WIP api work, got basic game startup functional, havent gotten to login yet

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,6 @@ include("src:common")
 include("src:modulemanager")
 include("src:contentserver")
 include("src:globalserver")
+include("src:gameplayapi")
+include("src:commonapi")
 include("deps:connective-http")
