--- a/src/commonapi/build.gradle
+++ b/src/commonapi/build.gradle
@@ -49,7 +49,8 @@ dependencies {
 	
 	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.0'
 	implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.0'
-	
+	implementation group: 'org.bouncycastle', name: 'bcpkix-jdk14', version: '1.73'
+
 	implementation 'org.ow2.asm:asm:9.1'
 	implementation 'org.ow2.asm:asm-tree:9.1'
 	implementation 'org.ow2.asm:asm-commons:9.1'
@@ -60,9 +61,6 @@ dependencies {
 	implementation group: 'javax.activation', name: 'activation', version: '1.1.1'
 	
 	implementation project(":src:common")
-	implementation project(":src:contentserver")
-	implementation project(":src:commonapi")
-	implementation project(":src:gameplayapi")
 	implementation project(":src:modulemanager")
 }
 
@@ -71,9 +69,9 @@ project.configurations.implementation.canBeResolved = true
 task installation () {
 	doLast {
 		copy {
-			from "edge"
-			from "edge.bat"
-			into "../../build/pkg"
+			from "edge-commonapi"
+			from "edge-commonapi.bat"
+			into "../../build/commonapi"
 		}
 		for (ResolvedArtifact arti : project.configurations.implementation.resolvedConfiguration.getResolvedArtifacts()) {
 			if (arti.getClassifier() != null)
@@ -81,7 +79,7 @@ task installation () {
 			copy {
 				from arti.file
 				rename arti.file.getName(), arti.name + (arti.getClassifier() != null && !arti.getClassifier().isEmpty() ? "-" + arti.getClassifier() : "") + "." + arti.getExtension()
-				into "../../build/pkg/libs"
+				into "../../build/commonapi/libs"
 			}
 		}
 		for (def task : project.tasks) {
@@ -92,7 +90,7 @@ task installation () {
 				copy {
 					from task.getArchiveFile().get()
 					rename task.getArchiveFile().get().getAsFile().getName(), task.getArchiveBaseName().get() + (task.getArchiveClassifier().get() != null && !task.getArchiveClassifier().get().isEmpty() ? "-" + task.getArchiveClassifier().get() : "") + "." + task.getArchiveExtension().get()
-					into "../../build/pkg"
+					into "../../build/commonapi"
 				}
 			}
 		}
