--- a/src/commonapi/build.gradle
+++ b/src/commonapi/build.gradle
@@ -60,6 +60,9 @@ dependencies {
 	
 	implementation group: 'javax.activation', name: 'activation', version: '1.1.1'
 	
+	implementation group: 'org.apache.derby', name: 'derby', version: '10.16.1.1'
+	implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.0.33'
+	
 	implementation project(":src:common")
 	implementation project(":src:modulemanager")
 }
