--- a/src/common/build.gradle
+++ b/src/common/build.gradle
@@ -61,7 +61,9 @@ dependencies {
 	implementation group: 'javax.activation', name: 'activation', version: '1.1.1'
 	
 	implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.0.33'
-	
+	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '3.1.4'
+	implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.42.0.0'
+		
 	implementation project(":src:modulemanager")
 }
 
