--- a/src/common/build.gradle
+++ b/src/common/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'java'
+	id 'java'
 	id 'maven-publish'
 }
 
@@ -15,10 +15,10 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 
 repositories {
-    mavenCentral()
-    flatDir {
-       dirs '../../libraries', '../../fluid', '../../deps'
-   }
+	mavenCentral()
+	flatDir {
+		dirs '../../libraries', '../../fluid', '../../deps'
+	}
 }
 
 task javaDocs(type: Javadoc) {
@@ -46,24 +46,25 @@ artifacts {
 dependencies {
 	implementation project(":deps:connective-http")
 	implementation name: 'Fluid', version: '1.0.0.A33'
-	
+
 	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.0'
 	implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.0'
 	implementation group: 'org.bouncycastle', name: 'bcpkix-jdk14', version: '1.73'
-	
+
 	implementation 'org.ow2.asm:asm:9.1'
 	implementation 'org.ow2.asm:asm-tree:9.1'
 	implementation 'org.ow2.asm:asm-commons:9.1'
-	
+
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.0'
 	implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.15.2'
 
 	implementation group: 'javax.activation', name: 'activation', version: '1.1.1'
-	
+
 	implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.0.33'
 	implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '3.1.4'
+	implementation group: 'org.postgresql', name: 'postgresql', version: '42.6.0'
 	implementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.42.0.0'
-		
+
 	implementation project(":src:modulemanager")
 }
 
