Wip MMO server work

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,5 +4,6 @@ include("src:modulemanager")
 include("src:contentserver")
 include("src:globalserver")
 include("src:gameplayapi")
+include("src:mmoserver")
 include("src:commonapi")
 include("deps:connective-http")
