--- a/src/modules/accountimporter/build.gradle
+++ b/src/modules/accountimporter/build.gradle
@@ -25,4 +25,8 @@ dependencies {
 	implementation project(":deps:connective-http")
 	implementation project(":src:modulemanager")
 	implementation project(":src:common")
+
+	implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.0'
+	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.0'
+	implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.0'
 }
