--- a/settings.gradle
+++ b/settings.gradle
@@ -7,4 +7,6 @@ include("src:gameplayapi")
 include("src:mmoserver")
 include("src:commonapi")
 include("src:modules:accountimporter")
+include("src:sentinel:edge-sentinel-emulation-software")
 include("deps:connective-http")
+include("deps:razorwhip:Sentinel Launcher:sentinel-launcher")
