--- a/src/sentinel/edge-sentinel-emulation-software/build.gradle
+++ b/src/sentinel/edge-sentinel-emulation-software/build.gradle
@@ -21,31 +21,18 @@ repositories {
    }
 }
 
+jar {
+	from "../../../build/pkg-sentinel"
+}
+
 dependencies {
 	implementation project(":deps:connective-http")
 	implementation project(":src:modulemanager")
 	implementation project(":src:common")
 
+	implementation project(":deps:razorwhip:Sentinel Launcher:sentinel-launcher")
+
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.0'
 	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.0'
 	implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.0'
 }
-
-task installation () {
-	doLast {
-		for (def task : project.tasks) {
-			if (task instanceof AbstractArchiveTask) {
-				if (!task.getArchiveClassifier().get().isEmpty())
-					continue;
-				copy {
-					from task.getArchiveFile().get()
-					rename task.getArchiveFile().get().getAsFile().getName(), task.getArchiveBaseName().get() + (task.getArchiveClassifier().get() != null && !task.getArchiveClassifier().get().isEmpty() ? "-" + task.getArchiveClassifier().get() : "") + "." + task.getArchiveExtension().get()
-					into "../../../build/pkg-sentinel/expandedserver/modules"
-				}
-			}
-		}
-	}
-}
-
-installation.dependsOn project.tasks.build
-build.finalizedBy installation
