--- a/src/globalserver/build.gradle
+++ b/src/globalserver/build.gradle
@@ -74,7 +74,7 @@ task installation () {
 		copy {
 			from "edge"
 			from "edge.bat"
-			into "../../build/pkg"
+			into "../../build/pkg/" + project.version
 		}
 		for (ResolvedArtifact arti : project.configurations.implementation.resolvedConfiguration.getResolvedArtifacts()) {
 			if (arti.getClassifier() != null)
@@ -82,7 +82,7 @@ task installation () {
 			copy {
 				from arti.file
 				rename arti.file.getName(), arti.name + (arti.getClassifier() != null && !arti.getClassifier().isEmpty() ? "-" + arti.getClassifier() : "") + "." + arti.getExtension()
-				into "../../build/pkg/libs"
+				into "../../build/pkg/" + project.version + "/libs"
 			}
 			copy {
 				from arti.file
@@ -98,7 +98,7 @@ task installation () {
 				copy {
 					from task.getArchiveFile().get()
 					rename task.getArchiveFile().get().getAsFile().getName(), task.getArchiveBaseName().get() + (task.getArchiveClassifier().get() != null && !task.getArchiveClassifier().get().isEmpty() ? "-" + task.getArchiveClassifier().get() : "") + "." + task.getArchiveExtension().get()
-					into "../../build/pkg"
+					into "../../build/pkg/" + project.version
 				}
 				copy {
 					from task.getArchiveFile().get()
@@ -109,6 +109,13 @@ task installation () {
 		}
 	}
 }
+
+task pkg(type: Zip, dependsOn: installation) {
+	from "../../build/pkg/" + project.version
+	destinationDir = file("../../build/packages")
+	archiveBaseName = "edge"
+}
+installation.finalizedBy project.tasks.pkg
 
 installation.dependsOn project.tasks.build
 build.finalizedBy installation
