Overhaul the EdgeWebService class to make programming the requests a lot easier

--- a/src/contentserver/build.gradle
+++ b/src/contentserver/build.gradle
@@ -147,3 +147,13 @@ task updateData () {
 
 updateData.dependsOn project.tasks.build
 build.finalizedBy updateData
+
+eclipse {
+  jdt {
+	  file {
+		  withProperties { properties ->
+			  properties.setProperty("org.eclipse.jdt.core.compiler.codegen.methodParameters", "generate")
+		  }
+	  }
+  }
+}
