--- a/src/globalserver/build.gradle
+++ b/src/globalserver/build.gradle
@@ -158,3 +158,13 @@ task updateData () {
 
 updateData.dependsOn project.tasks.build
 build.finalizedBy updateData
+
+eclipse {
+  jdt {
+	  file {
+		  withProperties { properties ->
+			  properties.setProperty("org.eclipse.jdt.core.compiler.codegen.methodParameters", "generate")
+		  }
+	  }
+  }
+}
