Make sure java compiles parameter names into the compiled java class files

--- a/src/common/build.gradle
+++ b/src/common/build.gradle
@@ -21,6 +21,10 @@ repositories {
 	}
 }
 
+compileJava {
+	options.compilerArgs << '-parameters'
+}
+
 task javaDocs(type: Javadoc) {
 	classpath = sourceSets.main.runtimeClasspath
 	source = sourceSets.main.allJava
