--- a/src/modules/grid-client/build.gradle
+++ b/src/modules/grid-client/build.gradle
@@ -21,6 +21,10 @@ repositories {
    }
 }
 
+compileJava {
+	options.compilerArgs << '-parameters'
+}
+
 dependencies {
 	implementation project(":deps:connective-http")
 	implementation project(":src:modulemanager")
@@ -30,6 +34,8 @@ dependencies {
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.0'
 	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.0'
 	implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.0'
+	
+	implementation group: 'org.bouncycastle', name: 'bcpkix-jdk14', version: '1.73'
 }
 
 task installation () {
