--- a/src/modules/grid-client/build.gradle
+++ b/src/modules/grid-client/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 	implementation project(":src:modulemanager")
 	implementation project(":src:common")
 	implementation project(":src:gameplayapi")
+	implementation project(":src:mmoserver")
 
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.0'
 	implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.0'
