--- a/src/sentinel/edge-sentinel-emulation-software/build.gradle
+++ b/src/sentinel/edge-sentinel-emulation-software/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	implementation project(":src:globalserver")
 	implementation project(":src:common")
 
+	implementation project(":src:modules:grid-client")
 	implementation project(":deps:razorwhip:Sentinel Launcher:sentinel-launcher")
 
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.9.0'
